<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
	<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="20dp"
	>
		<TextView
				android:layout_width="match_parent"
				android:layout_height="20dp"
				android:id="@+id/typeGame"
				android:text="@string/typePartie"
				android:layout_alignParentLeft="true"
		/>
		<TextView
				android:id="@+id/durationGame"
				android:layout_width="150dp"
				android:layout_height="20dp"
				android:text="@string/gameDuration"
				android:layout_marginLeft="250dp"
		/>
	</RelativeLayout>
	<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="20dp"
	>
		<TextView
				android:text="@string/strNumber"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
		/>
		<TextView
				android:id="@+id/numberSelected"
				android:layout_marginLeft="140dp"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
		/>
	</RelativeLayout>
	<com.example.adufresne.sudoku.sudokuGrid
			android:id="@+id/sudokuGrid"
			android:layout_width="match_parent"
			android:layout_height="363dp"
			android:layout_marginTop="50dp"
	/>
	<RelativeLayout
			android:id="@+id/relativeLayout1"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content">
		<Button
				android:id="@+id/button1"
				android:layout_width="40dp"
				android:layout_height="wrap_content"
				android:text="@string/button1Text"
				android:layout_alignParentLeft="true"/>
		<Button
				android:id="@+id/button2"
				android:layout_width="40dp"
				android:layout_height="wrap_content"
				android:text="@string/button2Text"
				android:layout_marginLeft="40dp"/>
		<Button
				android:id="@+id/button3"
				android:layout_width="40dp"
				android:layout_height="wrap_content"
				android:text="@string/button3Text"
				android:layout_marginLeft="80dp"/>
		<Button
				android:id="@+id/button4"
				android:layout_width="40dp"
				android:layout_height="wrap_content"
				android:text="@string/button4Text"
				android:layout_marginLeft="120dp"/>
		<Button
				android:id="@+id/button5"
				android:layout_width="40dp"
				android:layout_height="wrap_content"
				android:text="@string/button5Text"
				android:layout_marginLeft="160dp"/>
		<Button
				android:id="@+id/button6"
				android:layout_width="40dp"
				android:layout_height="wrap_content"
				android:text="@string/button6Text"
				android:layout_marginLeft="200dp"/>
		<Button
				android:id="@+id/button7"
				android:layout_width="40dp"
				android:layout_height="wrap_content"
				android:text="@string/button7Text"
				android:layout_marginLeft="240dp"/>
		<Button
				android:id="@+id/button8"
				android:layout_width="40dp"
				android:layout_height="wrap_content"
				android:text="@string/button8Text"
				android:layout_marginLeft="280dp"/>
		<Button
				android:id="@+id/button9"
				android:layout_width="40dp"
				android:layout_height="wrap_content"
				android:text="@string/button9Text"
				android:layout_marginLeft="320dp"/>
	</RelativeLayout>
	<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="40dp"
			android:layout_marginBottom="10dp">
		<Button
				android:id="@+id/deleteButton"
				android:layout_height="match_parent"
				android:layout_width="120dp"
				android:layout_marginLeft="120dp"
				android:text="@string/deleteString"
		/>
	</RelativeLayout>
</LinearLayout>