<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context="com.example.adufresne.sudoku.MainActivity">
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	              android:orientation="vertical"
	              android:layout_width="fill_parent"
	              android:layout_height="fill_parent"
	              android:gravity="center"
	              android:padding="30dip"
	>
		<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/main_title"
				android:textSize="24.5sp"
		/>
		<Button
				android:id="@+id/selectLevel"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/new_game_label"
		/>
		<Button
				android:id="@+id/continueLevel"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/continueGame"
		/>
	</LinearLayout>
</android.support.constraint.ConstraintLayout>
